# ChangeLog for dev-cpp/gflags
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-cpp/gflags/ChangeLog,v 1.32 2014/10/25 16:43:46 kensington Exp $

  25 Oct 2014; Michael Palimaka <kensington@gentoo.org> -gflags-2.0-r1.ebuild,
  -gflags-2.0.ebuild:
  Remove old.

  25 Oct 2014; Markus Meier <maekke@gentoo.org> gflags-2.1.1-r1.ebuild:
  arm stable, bug #525966

  23 Oct 2014; Pacho Ramos <pacho@gentoo.org> gflags-2.1.1-r1.ebuild:
  amd64/x86 stable, bug #525966

*gflags-9999 (17 Jul 2014)

  17 Jul 2014; Mike Gilbert <floppym@gentoo.org> +gflags-9999.ebuild:
  Add live ebuild for testing.

*gflags-2.1.1-r1 (16 Jul 2014)

  16 Jul 2014; Julian Ospald <hasufell@gentoo.org> -gflags-2.1.1.ebuild,
  +gflags-2.1.1-r1.ebuild:
  build shared libs wrt #517244, add static-libs USE flag

  15 Jul 2014; Mike Gilbert <floppym@gentoo.org> gflags-2.1.1.ebuild:
  Drop shared libs again; ABI is not stable.

  15 Jul 2014; Mike Gilbert <floppym@gentoo.org> +files/gflags-2.1.1-libs.patch,
  gflags-2.1.1.ebuild:
  Enable shared libs, make static libs optional. Backport libdir and soname
  changes from upstream.

*gflags-2.1.1 (14 Jul 2014)

  14 Jul 2014; Patrick Lauer <patrick@gentoo.org> +gflags-2.1.1.ebuild:
  Bump, needed as dependency of sys-apps/lmctfy

*gflags-2.0-r1 (25 Feb 2014)

  25 Feb 2014; Mike Frysinger <vapier@gentoo.org> +gflags-2.0-r1.ebuild:
  Add multilib-minimal support.

  19 Oct 2013; Mike Frysinger <vapier@gentoo.org> gflags-2.0.ebuild:
  Add keywords for everyone.

  18 Oct 2013; Mike Frysinger <vapier@gentoo.org> gflags-2.0.ebuild:
  Add more keywords.

  07 Aug 2013; Sergey Popov <pinkbyte@gentoo.org> gflags-2.0.ebuild:
  Stable on arm, wrt bug #479720

  04 Aug 2013; Sergey Popov <pinkbyte@gentoo.org> gflags-2.0.ebuild:
  Stable on amd64 and x86, wrt bug #479720

  16 Dec 2012; Pacho Ramos <pacho@gentoo.org> -gflags-1.7.ebuild, metadata.xml:
  Drop maintainer due retirement, #95685
