@@ -3,25 +3,14 @@ Hash: SHA256
 
 AUX gflags-2.1.1-libs.patch 1975 SHA256 0906b7e45563eddfe31b7ca1b4862f374c09342a320dbb313ec408a08e743d5f SHA512 8e75d43de9de8053de42573bd0f243b8060bb1f43f995fe555c0cb984bacddddbc670c9f17115f054e5a54bc52a7d3df20b39b03c3229bae397ad3dfbcf9a66c WHIRLPOOL 8d8e5b581edb0539d8d22c91af5deef204abb50ffb22f54c819f9ae177de66118275eb0a46b37098c426e701162b1ed30668b55d43de3959486c23a73f1ea020
 DIST gflags-2.1.1.tar.gz 102015 SHA256 432edece8102fc141c2e3381e2eb5eabb1ce7614851cc96bdec4715105086238 SHA512 18d1a0a1271f12f0e87447e3a9d6810f531f5b190d84274465add5a928c189caac911ec2592422895961ab3c0c7566ff50c0c22f71d185ac3413c54bdbfb00ef WHIRLPOOL 608dc62262d8b4a0451dd3493b02fd35ad5214f1793f173ca5d93e631e15b59cc4557b2a2f9f5e67f72c2ad0d6cd343648b113bf4701fd8f6c3f5d949ac41813
-EBUILD gflags-2.1.1-r1.ebuild 914 SHA256 5ab45fb86e98c824e8e3b65767c6e61dc3597a84ab81ff3f73d9ed65734db694 SHA512 59596324806359c286b004ef961c3e8c4ff244282173780a41284362643d7c118d217d1db7029a2d2b173d6e091e3e0396d338aeab19695db4d96f951b55c00e WHIRLPOOL 6912f163a3ee5b611959002a305c697ee54d7bdf99fc4f169d525fc2a0494c06a5d294d35ac43e05fe93a366300f44efcd314626d1b51f36a3580fb8cf5ea107
+EBUILD gflags-2.1.1-r1.ebuild 910 SHA256 f187d2983f4b9ff35f2864c35d1676402f61d6bf5d7d02027097fc7d3ca108fe SHA512 0c44727aa11b2931cf2056d36258d44ade0ec7acd5a25af663d6f1a2c23e7309ccb76150a024506b9bb7afd2f7a2d6d67d9bb5bd95546dee792707faeed22f08 WHIRLPOOL 19a47512a9eec3c2ed224a771c709f3b1446ae5e053ddad301c14731d61e1eece33382ecc3bce41953bc7735b96c0bf772a149a29537ae508356e2833ddfbeb1
 EBUILD gflags-9999.ebuild 981 SHA256 5316138ae13163a1dc6a8d05c8eef3d53bef8b5acb53da8aa22635e6b6fb172f SHA512 e087a4131e5cb64bb7b3b91cd072fe4478925b4b82abc7bdca2454cfd8a8a0531b6e2d230289c36de4f9eac90096c2e7386ab0649577eebb0bf86c52e144e27c WHIRLPOOL dfdc16e768a16fa2e0172f9f977a438cca7fe0752e21617a276445ec94ec3186e7a26aa262a3b9bc8b92e6f3e006cbcd758fad7a0ac1626941e3fddc3a55aa35
-MISC ChangeLog 4478 SHA256 f2c3c85b7636bdd0698d473fec8391ad1f0a87de85621e9608e6d132a94508f8 SHA512 80941886d80c9dda8cec9b4fa9e5d0ce7b168530ae1bb8e0e39cbf29c470ef2d6c0211fd7dc84ea2ca736301c12b0649d39c60b4fbebac1b37755ce1e44b42cd WHIRLPOOL 3d885c31a86f9daa9f97b1bdf42ebe7ab9d8863ac7eda247d62fb757e0f88abd9fb8bdbae8a320ed00c5087a9dc630cff979a9f99c254ae3f1c7330310d044e8
+MISC ChangeLog 4577 SHA256 64e288e6c007bb3ac0d496167c95a730e77862865a291e7f81ec2cfbbdceb03e SHA512 9f4ea8cf9bf4a4b48ffb23e5970861dc00f76f4dfdb774778f58a8b4abe8c711a68c828daa32ab0d330f84701645923f88bcebaa26d59e24323248d6ce644702 WHIRLPOOL 5c2e0e2a8051478a2793c6c9fdbce3e36c2fff1f6e3cc5e3aa7b757c8c475b2b0978456bdd52b3937ea6ca73d41e6876cbf8fd8a59d4522816203b260250b1e2
 MISC metadata.xml 289 SHA256 9544b6246d963794455ace4d80c5e285920b534f98c87017ae7e285378050050 SHA512 5717a8e612700d6d5e8a0e0bf188efaf148c92782af7600209eb3e9a167e075fe8feaefab52c43290b1c5535ca63ca8f5969e470dfd7387c682868bb4621eddd WHIRLPOOL 09b74b91214bd09684c0af82d77153c9eb39bf45d5833cc67fb896e7c79243a4fd89441e6b95956c9c1f1f70a969650bbd06f0d104d1ab9ec43c0ffb5ed63b59
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0
+Version: GnuPG v2
 
-iQJiBAEBCABMBQJUS9NHRRSAAAAAABQAKGlzc3Vlci1mcHJAbm90YXRpb25zOTc5
-MTY5NkQ3RDM3NkRBN0U5QjZGMTUwMDZCMUYzOERDQTQ1QTFFQwAKCRAGsfONykWh
-7ElND/kBdYupO4nBijeAuTux6W08O+vCGGEbZs8s+hXv3Ybkl7dVzGutCZmZkRxd
-HxGGLUDOEKzFlpRoJa4o9mb4YciGNhwaOvG3O5ciX3zxIBx4q2PkgLjWApWnZiDJ
-WBpv0Tnn5uKKk4Prb/3IqjakenTF7HI5sUoLCuuehDMyl+maNcyVKcHYafSxjyyb
-EnNpYn9mXCzK4H0ZdeYmJmgn7+JlSgRtogcV50symCF6WKPvX3Fk3CC3Zlg1oEmz
-rTCkka8glNtFqlRTsecBGrPxUIg99Esvg3XWSBR/wJ5LrV8Jq/LF9Rv+yX59/4Sn
-wZr+J7aoqgJhP8ZwbZW18i4STQUl1GG9HSg45s9jmJOE70KavOh32SNENtQtSwSm
-XuNZFkcRfeCf51F7koinctrlwlleZ8PwX0J34JkMxN5IvGBRa4s/bBm8BVxmtdAu
-0XxL0knSd7XPEIsnNqbtc8I2jf5fhXnJPE3dwOXNx8YL6NTnzzKqboSLGG4i4Tso
-boliF/T7LaACW2qPiYG+X9it8vfVyoFdYOCM4u6/SWNdFE8XjN+D2Wihd4NsSs9y
-tLiAJVJwaATNg38PDxCr2Ye9UhpEHVkh52JWErQu/8S0XKdsFKIHbsh7Z+wAH8WG
-3qrOhgpJL1cPGbKv1Aeksu2Wy2zzulwRl4OqwPHuPbLNs5lLmA==
-=kh7b
+iEYEAREIAAYFAlVDE+cACgkQVWmRsqeSphMKSQCeMMk+7baAUuDlc0ky5So21h72
+BrkAn3K1vGGkBdRg+veTC5VEfmPGQYFd
+=Sqa8
 -----END PGP SIGNATURE-----
