@@ -1,6 +1,6 @@
-# Copyright 1999-2014 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-cpp/gflags/gflags-2.1.1-r1.ebuild,v 1.3 2014/10/25 14:05:30 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-cpp/gflags/gflags-2.1.1-r1.ebuild,v 1.4 2015/05/01 05:49:26 jer Exp $
 
 EAPI="5"
 
@@ -12,7 +12,7 @@ SRC_URI="https://github.com/schuhschuh/gflags/archive/v${PV}.tar.gz -> ${P}.tar.
 
 LICENSE="BSD"
 SLOT="0"
-KEYWORDS="~alpha amd64 arm ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc x86 ~amd64-linux ~x86-linux"
+KEYWORDS="~alpha amd64 arm ~hppa ~ia64 ~m68k ~mips ~ppc ppc64 ~s390 ~sh ~sparc x86 ~amd64-linux ~x86-linux"
 IUSE="static-libs"
 
 PATCHES=( "${FILESDIR}/gflags-2.1.1-libs.patch" )
