@@ -7,24 +7,14 @@ DIST glog-0.3.2.tar.gz 478666 SHA256 5e47f9437e97cb1621930dea3c557a2801ddac3b5db
 DIST glog-0.3.3.tar.gz 509676 SHA256 fbf90c2285ba0561db7a40f8a4eefb9aa963e7d399bd450363e959929fe849d0 SHA512 95418ff0857415a0fbc15caeb22a13f3b6736618adcc3c30e054626f1397bc58399c45f68784c70b1f5dc594ebc6ea66e386896beab5c20be72dd53b25f5a4ac WHIRLPOOL 7ba26a936e3ac18afbccf141b888a885f3f9847d4f19c0ebad416d16fcff936b9622e03aec155f77622759a40e8684673c29648c026426326239f4485113c6cf
 EBUILD glog-0.3.1.ebuild 808 SHA256 d9dcd2ab292654db61887bfa096fb9094df6c67a1a35013aef61b92313ed053f SHA512 0b3e5fa9dbce90d0b05ba90c3188a7306013c2d2dce3159a92276bd735a313a4a0236714db6524c13a2340fea15c62c9ffbb99362d9c5f17545bce6b3e68a3ba WHIRLPOOL 6621d2db45e3f50e347a5657913de0f76c4095cf92c22e964930bdf9511b6d5892162481614af5e526bc449fe603d2bd1b5cab9ac9f1effbb860bf6c805861c9
 EBUILD glog-0.3.2.ebuild 1381 SHA256 dfdb35444402e1d95932f29395996da7affa5cabbbe730f24a8b6a7fc601bf38 SHA512 fc0c0df0cd8a7c04799a1eebf8a4e700b98af35af057a42cef8b02c5ec73e28ba6e7096cf88f668ec5bff583a90dc7dd088bf70ca3631a362ddb5d3c5cabf46b WHIRLPOOL 8e98bc119fc89e13f3166b818bcdc1642a5ba64a51e97d3e37ab99cd25f403690cd51a1ab71aec758e64179d9bc54d7b7e629aea34b18e38e80981ab56a5fe69
-EBUILD glog-0.3.3-r1.ebuild 1947 SHA256 b9a029dc0c6bc3c8d3e8b2caadb57caf7169447a89f2a1275731fb487f045b0d SHA512 9571c52dbed602329b2f4fc26f1462692afd258edd8495ecc10fa3b6f683d06c421c172a2bf990400095b3fc0c12691cc782f6eb0a121281def3ca71508713f1 WHIRLPOOL 554cc7b55f77b20e84ee3df88df20d094dcd710b2b1b52499acb045bbfb2cd3abdbd5e85ee9c50fbc377391151fd161bbc5fe0b713fbfde6e3684ae7e3c2992f
+EBUILD glog-0.3.3-r1.ebuild 1945 SHA256 bf5c98cae3efcb5130641b4489a7632b3c05b536bfbba381851df95da33ca540 SHA512 d6baf3ff7d169164c51a832264675d09cf1b43900fe56f2ff0a50b01d0561be68e411c655b010ec267618b31df55c2f914a3b4a1ccda62fbba2facfb6baf0cf7 WHIRLPOOL 4db49672a1ac471e587e58c4265457a612e8f9a3adb743b1432d8d448c9da40739b620f472fc96aa115a0caf1ffd8788c9a3df668930b0f39fbc8a522f7ba190
 EBUILD glog-0.3.3.ebuild 1445 SHA256 fd1b7c46ea365f28a89a111b51fa28518208eed3bded95d91a86a836dcb9df49 SHA512 92fc535769c9032ae1a8a1ebd2cb5811a283b1fba9f675120b8d3b4dfebf0a423143b2d735a98a12a4eb8da0858e230bf8ca915b2ae056ee6206f300a9500028 WHIRLPOOL 04207f1006234af0c8f41e407fcc85672d1e8a11ec96e475df3abd3b3d5a4a5b0573603aea69dbec84da24967a36ff1ad44ac51a36e981cca02e1ca7a17a3013
-MISC ChangeLog 2586 SHA256 8e2a3afa866c7db000877f95c975ad960ba32f29b64401bd8c8e6ed5329c0206 SHA512 3a29a6b08874a4f6d65fcd8bf51f2b28da2dadba3abc2392f0d2b1463c8f6513ed67704db0013fd052d6afeb52b23b4d3c73dd7094033ae77845e6f6d0316734 WHIRLPOOL b9c3fc59ac3f76a0f092081eeefa117f88f31815f917abbbdbb91d16b213041cfe8e44ab33e45b4116f3a7ff20ad8936055e8f66f784db77c2f0095019490fa6
+MISC ChangeLog 2689 SHA256 9c19163205dee303f883c006a06b0f4bbe8d54709bd9165c052de7b96f372ee7 SHA512 274de3ece525e2d20ec5fb178c482b092185fbb7b46d93cc0fbf7acd608d45ae949c1eca4cd6294e4ff7321a09699df9a1e167f36b715588475c2bf126cad8d1 WHIRLPOOL 8f2df79c46fe2730793b5c2f3569507c5d175ecebb35be927576d0c30cae618a9235d00a76d19c8463fdc8e44ee38bc3a90fedfd5e955e293c00a96d7e21d5fe
 MISC metadata.xml 530 SHA256 603f2288ca0f1591435b72b5d17e430ca3180cb7c4e9418b36ee2eae3adaed1f SHA512 fed8600db6bd522dbe3a3ef58e22a7cc20ace57eb3b8e9ca7b6be0cf9ff5a881f38c2b643c93ff26452b10ed30cacb65283fe289e193280dcecca19995bdfd45 WHIRLPOOL da6478c7cdf0b5d72953a243fb32eb71ca709768c4a3cf96565e24301919e651ffcbf06d71fde33f6c681c8f9c22c023180b6d8cbe07fa6a2e622787c48cf453
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJU9N36AAoJEJIMDbyqvv1VglEQAKpjbBqcxG4CSY23K83I/3jS
-8HhwxrkqWvxn+Taj220CDwnhKB5s5aHtTd/eSJTNwwTz9843+WFsdsXBasfz4qY3
-+pF7wzm4p2rl9fNgEuHrBt+Fclh+vG3ZIUHPo54jbr5JtSEJ5LTZKNToEPFmaGir
-s9Hg7RGkKh1FirVrYyA5JajCYgucpBXY23EHcvuBjcUABNraqnV+HIPuTXWavBql
-WopN/5VfN1e8cqG5doz9A2jl+Fn5QcnBGICUzvWwM6d9+1YBsP8rFcLW79sOoIaA
-dzfFnLcAfbs1qMyMHM3X36uu8uHCARIgZqWyXbkyVZcM8RDkzDeW2PFwc5uSycjV
-krfYSKP4HNX9VHM5X9vOXCUlK9y3O6Mf6Dq9uI5ghdbSYLZbzHkaM1hjf6FQOQfi
-VDguropH9Rvl9YVRUjSoj8peSnbigl2R4SoK+NHuP0lJ4oIo2M7hwoowEuKm9qsO
-jPiN4wbrgoBmWMUer0d1RAx18YG6gpryn5r1LkMzXUGYzYEXGApyAPDf3UxiQ+3O
-znKa9IU1M+3WmBNOZIvgwz07Zo3Iv7F6BIbhGkmITlWktzzAynWpkp84AwUjEffH
-JujAweW6hE9aN1QLSUMVlw0PkUNfJy1+c5ZnWd9Ld6zTeCDlV5VbVQ2mEYZD0fc4
-wrapPK9UNy/y3KE31HaA
-=eDpY
+iEYEAREIAAYFAlVDFA0ACgkQVWmRsqeSphN2EACdFqEMKHq5K0nvm8eROphj80SW
+FGwAniiCcFEniLQ+ghdKefAepgnaK/CN
+=1BjA
 -----END PGP SIGNATURE-----
