@@ -1,6 +1,9 @@
 # ChangeLog for dev-cpp/glog
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-cpp/glog/ChangeLog,v 1.19 2015/03/03 06:04:10 dlan Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-cpp/glog/ChangeLog,v 1.20 2015/05/01 05:50:04 jer Exp $
+
+  01 May 2015; Jeroen Roovers <jer@gentoo.org> glog-0.3.3-r1.ebuild:
+  Stable for PPC64 (bug #540844).
 
   02 Mar 2015; Yixun Lan <dlan@gentoo.org> glog-0.3.3-r1.ebuild:
   add arm64 support, tested on A53 board
