@@ -1,6 +1,9 @@
 # ChangeLog for dev-cpp/yaml-cpp
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-cpp/yaml-cpp/ChangeLog,v 1.13 2015/04/19 11:30:38 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-cpp/yaml-cpp/ChangeLog,v 1.14 2015/05/01 05:50:53 jer Exp $
+
+  01 May 2015; Jeroen Roovers <jer@gentoo.org> yaml-cpp-0.5.1.ebuild:
+  Stable for PPC64 (bug #540844).
 
   19 Apr 2015; Anthony G. Basile <blueness@gentoo.org> yaml-cpp-0.3.0.ebuild,
   yaml-cpp-0.5.1.ebuild:
